--- a/src/Weather.css
+++ b/src/Weather.css
@@ -17,11 +17,10 @@ body {
 
 .Weather h1 {
   font-size: 40px;
-  font-weight: 300;
   line-height: 44px;
   margin: 20px 0 0 0;
   color: #212121;
-  padding-bottom: 10px;
+  font-weight: bold;
 }
 
 .Weather input {
@@ -36,12 +35,10 @@ body {
 
 .Weather ul {
   margin-top: 30px;
-  display: block;
   padding: 0;
 }
 .Weather li {
   display: flex;
-  text-align: right;
   font-size: 16;
 }
 
